2000-5-19	Alexandra Ellwood <lxs@mit.edu>

	* sendauth.c, fwd_tgt.c: Changed to use krb5int_cc_default.  This function 
	supports the Kerberos Login Library and pops up a dialog if the cache does 
	not contain valid tickets.  This is used to automatically get a tgt before
	obtaining service tickets.  Note that this should be an internal function
	because callers don't expect krb5_cc_default to pop up a dialog!
	(We found this out the hard way :-)

2000-05-16  Ken Raeburn  <raeburn@mit.edu>
            Nalin Dahyabhai  <nalin@redhat.com>

	* conv_princ.c (krb5_524_conv_principal): Return an error if name
	is too long.  Use memcpy for character data since we already know
	the length.

2000-05-16  Ken Raeburn  <raeburn@mit.edu>

	* kfree.c: Remove unneeded "return" statements at the end of many
	functions.
	(krb5_free_*_content, krb5_free_*_contents,
	krb5_free_cred_enc_part, krb5_free_pwd_sequences): Set freed
	pointer members to null when containing structure isn't being
	freed.

2000-05-16  Tom Yu  <tlyu@mit.edu>

	* conv_princ.c (krb5_524_conv_principal): Make a copy of the krb5
	realm that is nul-terminated to avoid falling off the end of the
	krb5 realm, which is not necessarily nul-terminated.

2000-05-16  Nalin Dahyabhai  <nalin@redhat.com>

	* kfree.c (krb5_free_keyblock_contents): Set contents pointer to
	null after freeing.

2000-05-15      Jeffrey Altman          <jaltman@columbia.edu>

        * Added new source file appdefault.c
          Implements new public functions

               krb5_appdefault_string
               krb5_appdefault_boolean

2000-05-12  Ken Raeburn  <raeburn@mit.edu>

	* t_kerb.c (test_524_conv_principal): New test code, to exercise
	yesterday's code addition.
	(main, usage): Updated.
	* t_krb5.conf: Added stanford.edu->IR.STANFORD.EDU mapping, and a
	test case for improperly long v4 realm names.
	* Makefile.in (check-unix): Run 524 conversion test for some test
	Athena and Stanford names.
	* t_ref_kerb.out: Updated.
